crates/ros-z/tests/ui/message_derive/const_generic.stderr
error: Message derive does not support const generics in v1
 --> tests/ui/message_derive/const_generic.rs:5:21
  |
5 | struct ConstGeneric<const N: usize> {
  |                     ^^^^^^^^^^^^^^
